--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,15 +21,15 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-  # black:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Black
-  #       uses: jpetrucciani/black-check@master
-  #       with:
-  #         path: '.'
+  black:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Black
+        uses: jpetrucciani/black-check@master
+        with:
+          path: '.'
   # mypy:
   #   runs-on: ubuntu-latest
   #   steps:
