--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,17 +30,17 @@ jobs:
         uses: jpetrucciani/black-check@master
         with:
           path: '.'
-  # mypy:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Mypy
-  #       uses: jpetrucciani/mypy-check@master
-  #       with:
-  #         path: 'manyworlds/'
-  # ruff:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: chartboost/ruff-action@v1
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Mypy
+        uses: jpetrucciani/mypy-check@master
+        with:
+          path: 'jira_time_machine/'
+  ruff:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: chartboost/ruff-action@v1
