--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,19 +30,25 @@ jobs:
         uses: jpetrucciani/black-check@master
         with:
           path: '.'
-  mypy:
+mypy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Types
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+      - name: Install mypy and dependencies
         run: |
           python -m pip install mypy
-          mypy --install-types
-      - name: Mypy
-        uses: jpetrucciani/mypy-check@master
-        with:
-          path: 'jira_time_machine/'
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install missing types
+        run: |
+          mypy --install-types --non-interactive jira_time_machine/
+      - name: Run mypy
+        run: |
+          mypy jira_time_machine/
   # ruff:
   #   runs-on: ubuntu-latest
   #   steps:
