exclude some lines and files from code coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,8 @@ path = "jira_time_machine/__init__.py"
 
 [tool.hatch.metadata.hooks.requirements_txt]
 files = ["requirements.txt"]
+
+[tool.coverage.run]
+omit = [
+    "tasks.py",
+    ]
